[gd_scene load_steps=2 format=3 uid="uid://new_game_setup"]

[ext_resource type="Script" path="res://scripts/ui/new_game_setup.gd" id="1"]

[node name="NewGameSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.07, 0.12, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 56.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "New Game"
horizontal_alignment = 1

[node name="MainHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 70.0
offset_right = -40.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="LeftPanel" type="VBoxContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme_override_constants/separation = 10

[node name="MapLabel" type="Label" parent="MainHBox/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select Map"

[node name="MapList" type="ItemList" parent="MainHBox/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_height = true

[node name="MapPreviewLabel" type="Label" parent="MainHBox/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1.0, 1)
text = "No map selected"
horizontal_alignment = 1

[node name="RightScroll" type="ScrollContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="RightPanel" type="VBoxContainer" parent="MainHBox/RightScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PlayersLabel" type="Label" parent="MainHBox/RightScroll/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Players"

[node name="PlayerContainer" type="VBoxContainer" parent="MainHBox/RightScroll/RightPanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4

[node name="Sep1" type="HSeparator" parent="MainHBox/RightScroll/RightPanel"]
layout_mode = 2

[node name="CreditsRow" type="HBoxContainer" parent="MainHBox/RightScroll/RightPanel"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="MainHBox/RightScroll/RightPanel/CreditsRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Starting Credits:"
vertical_alignment = 1

[node name="CreditsSpinBox" type="SpinBox" parent="MainHBox/RightScroll/RightPanel/CreditsRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -52.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(160, 40)
theme_override_font_sizes/font_size = 18
text = "BACK"

[node name="StatusLabel" type="Label" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="BottomBar"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
theme_override_font_sizes/font_size = 18
text = "START GAME"
